--- a/Assets/Bg/WaypointSystemForTimeline/Editor/BgWaypointSystemForTimelineEditor.asmdef
+++ b/Assets/Bg/WaypointSystemForTimeline/Editor/BgWaypointSystemForTimelineEditor.asmdef
@@ -4,7 +4,9 @@
         "GUID:64e3e3818e504482e97303b7cdab6b15",
         "GUID:f06555f75b070af458a003d92f9efb00"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
